signalrdemo_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: signalrdemo
  name: signalrdemo
  namespace: signalrdemo
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30776
    port: 5244
    protocol: TCP
    targetPort: 5244
  selector:
    run: signalrdemo
  sessionAffinity: None
  type: NodePort
